adding html pages and routes

--- a/views/start.html
+++ b/views/start.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SmallChange</title>
+    <title>MakeSmallChange</title>
     <!-- Custom Font - Change 'Muli' to the font you want -->
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Open+Sans|Open+Sans+Condensed:300" rel="stylesheet">
 
@@ -46,10 +46,6 @@
         </div>
 
         <div class="row">
-          <div class="col-md-12" id="navi">
-              <h2 id="title">Fund the change you want to see in the world, one cent at a time.</h2>
-              <button type="submit" class="btn btn-lg">Get Started</button>
-          </div>
           <div class="col-md-12" id="navi">
               <h4>Explore categories where you can make change:</h4>
               <button type="submit" class="btn btn-lg">Environment</button>
