mostly css additions

--- a/views/home.html
+++ b/views/home.html
@@ -27,168 +27,70 @@
 <body>
 
     <div class="container">
-        <div class="col-md-12" id="navi">
-            <div class="col-md-2">
-              <ul>
-                <li id="naviItem"><a href="placeholder">About</a></li>
-              </ul>
+
+        <!-- <div class="col-lg-12" id="navi"> -->
+            <div class="col-md-1">
+                <ul>
+                    <li id="naviItem"><a href="placeholder">About</a></li>
+                </ul>
             </div>
 
-            <div class="col-md-7">
-              <h1 id="title">Small Change</h1>
+            <div class="col-md-9">
+                <h1 id="title">Small Change</h1>
             </div>
-            <div class="col-md-3">
-              <ul>
-                  <li id="naviItem"><a href="placeholder">Log-In</a></li>
-                  <li id="naviItem"><a href="placeholder">Sign-Up</a></li>
-              </ul>
+
+            <div class="col-md-1">
+                <ul>
+                    <li  id="naviItem"><a href="placeholder">Log-In</a></li>
+                </ul>
             </div>
-        </div>
+            <div class="col-md-1">
+                <ul>
+                    <li id="naviItem"><a href="placeholder">Sign-Up</a></li>
+                </ul>
+            </div>
+            <br>
+            <br>
+
+        <!-- </div> -->
 
         <div class="row">
-          <div class="col-md-12" id="navi">
-              <h2 id="title">Fund the change you want to see in the world, one cent at a time.</h2>
-              <button type="submit" class="btn btn-lg">Get Started</button>
-          </div>
-          <div class="col-md-12" id="navi">
-              <h4>Explore categories where you can make change:</h4>
-              <button type="submit" class="btn btn-lg">Environment</button>
-              <button type="submit" class="btn btn-lg">Food Systems</button>
-              <button type="submit" class="btn btn-lg">Health</button>
-              <button type="submit" class="btn btn-lg">Animal Welfare</button>
-              <button type="submit" class="btn btn-lg">Education</button>
-              <button type="submit" class="btn btn-lg">Youth</button>
-              <button type="submit" class="btn btn-lg">Sustainabsility</button>
+            <div class="col-md-12" id="section">
+              <br>
+              <br>
+              <br>
 
-          </div>
-            <div class="col-md-4">
-                <h1>Sign-Up</h1>
-                <form class="form-horizontal" id="addForm">
-                    <div class="form-group">
-                        <label for="name" class="col-sm-2 control-label">Name</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="name" placeholder="Name" name="name" required>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="age" class="col-sm-2 control-label">Age</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="age" placeholder="Age" name="age" required>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="tags" class="col-sm-2 control-label">Tags</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="tags" placeholder="Tags (separated by comma)" name="tags" required>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="breed" class="col-sm-2 control-label">Breed</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="breed" placeholder="Breed" name="breed" required>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="weight" class="col-sm-2 control-label">Weight</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="weight" placeholder="Weight" name="weight" required>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="url" class="col-sm-2 control-label">ImgURL</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="url" placeholder="PhotoURL" name="url" required>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="location" class="col-sm-2 control-label">Location</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="location" placeholder="Location" name="location" required>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-sm-offset-2 col-sm-10">
-                            <button type="submit" class="btn btn-default">Submit</button>
-                        </div>
-                    </div>
-                </form>
-
+                <h2 class="text-center" id="bigWords">Fund the change you want to see in the world, one cent at a time.</h2>
+                <br>
+                <p class="text-center lead" style="padding:30px;padding-left30px; padding-right:30px">
+                  Each time we make a purchase, we have an impact on the world around us. Although obscured by
+                  the vast complexities of our industrialized ecosystem, our purchase decisions
+                  are directly shaping the world we live in, for better and for worse. The goal of Small Change is to
+                  begin to acknowledge those complexities and find a way to create a more visible, more positive
+                  connection between the actions we take everyday and the action we want to see but may not know how to create. </p>
+                <a href="/makesmallchange">
+                <button type="submit" class="btn btn-default btn-lg btn-block">Lets Get Started</button>
+              </a>
             </div>
-            <div class="col-md-8" id="animal-holder">
+            <br>
+            <div class="col-md-12" id="section">
+              <h4 class="text-center" id="section-title">How Small Change Makes Big Impact</h4>
+            </div>
+            <div class="col-md-12" id="section">
+                <h4 class="text-center" id="section-title">Explore Areas Where You Can Make Change</h4>
+                <br>
+                <button type="submit" class="btn btn-default btn-lg">Environment</button>
+                <button type="submit" class="btn btn-default btn-lg">Food Systems</button>
+                <button type="submit" class="btn btn-default btn-lg">Health</button>
+                <button type="submit" class="btn btn-default btn-lg">Animal Welfare</button>
+                <button type="submit" class="btn btn-default btn-lg">Education</button>
+                <button type="submit" class="btn btn-default btn-lg">Youth</button>
+                <button type="submit" class="btn btn-default btn-lg">Sustainability</button>
 
             </div>
         </div>
-    </div>
 
-    <!-- Edit Modal -->
-    <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog" role="document">
-
-            <div class="modal-content">
-
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="myModalLabel">Edit an Animal</h4>
-                </div>
-                <div class="modal-body">
-                    <form class="form-horizontal" id="editForm">
-                        <div class="form-group">
-                            <label for="name" class="col-sm-2 control-label">Name</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="edit-name" placeholder="Name" name="name" required>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="age" class="col-sm-2 control-label">Age</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="edit-age" placeholder="Age" name="age" required>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="tags" class="col-sm-2 control-label">Tags</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="edit-tags" placeholder="Tags (separated by comma)" name="tags" required>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="breed" class="col-sm-2 control-label">Breed</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="edit-breed" placeholder="Breed" name="breed" required>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="weight" class="col-sm-2 control-label">Weight</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="editWeight" placeholder="Weight" name="weight" required>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="url" class="col-sm-2 control-label">ImgURL</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="edit-url" placeholder="PhotoURL" name="url" required>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="location" class="col-sm-2 control-label">Location</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="edit-location" placeholder="Location" name="location" required>
-                            </div>
-                        </div>
-                        <div class="form-group hide">
-                            <label for="id" class="col-sm-2 control-label">ID</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="edit-id" placeholder="id" name="edit-id" required>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-sm-offset-2 col-sm-10">
-                                <button type="submit" class="btn btn-default">Submit</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
+    <!-- closing the container -->
     </div>
 
 </body>
@@ -201,21 +103,6 @@
 
 <!-- JQuery validate -->
 <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.min.js"></script>
-
-<script type="text/javascript">
-    $("form").validate({
-        rules: {
-            editWeight: {
-                required: true,
-                number: true // must be a number
-            },
-            weight: {
-                required: true,
-                number: true // must be a number
-            }
-        }
-    });
-</script>
 
 <!-- CUSTOM JS -->
 <script src="js/main.js"></script>
