--- a/views/home.html
+++ b/views/home.html
@@ -28,7 +28,7 @@
 
     <div class="container">
 
-        <!-- <div class="col-lg-12" id="navi"> -->
+        <!-- Top Navigation -->
             <div class="col-md-1">
                 <ul>
                     <li id="naviItem"><a href="placeholder">About</a></li>
@@ -52,7 +52,7 @@
             <br>
             <br>
 
-        <!-- </div> -->
+        <!-- Close Top Navigation-->
 
         <div class="row">
             <div class="col-md-12" id="section">
