--- a/views/select.html
+++ b/views/select.html
@@ -53,85 +53,37 @@
 
         <!-- Close top Navigation -->
         <div class="row">
-        <div class="col-md-12" id="section">
-          <h4 class="text-center ">Select areas where you would like to make a difference:</h4>
-        </div>
-
-        <div class="row">
-            <div class="col-md-3">
-              <h3 id="section-title">Environmental Protection</h3>
-              <p> Example Organizations:
-                <br>
-                Greenpeace, Friends of Earth, EarthJustice
-              </p>
+            <div class="col-md-4">
+                <div class="radio">
+                    <label>
+                      <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
+                      Contribute 0.50¢ / Purchase
+                    </label>
+                </div>
             </div>
-
-            <div class="col-md-3">
-              <h3 id="section-title">Sustainable Infrastructure</h3>
-              <p> Example Organizations:
-                <br>
-                Greenpeace, Friends of Earth, EarthJustice
-              </p>
+            <div class="col-md-4">
+                <div class="radio">
+                    <label>
+                <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
+                Contribute .05¢ / $1.00
+              </label>
+                </div>
             </div>
-
-            <div class="col-md-3">
-              <h3 id="section-title">Food System</h3>
-              <br>
-              <br>
-              <p> Example Organizations:
-                <br>
-                Greenpeace, Friends of Earth, EarthJustice
-              </p>
+            <div class="col-md-4">
+                <form class="form-inline">
+                    <div class="form-group">
+                        <label class="sr-only" for="exampleInputAmount">Amount (in dollars)</label>
+                        <div class="input-group">
+                            <div class="input-group-addon">$</div>
+                            <input type="text" class="form-control" id="exampleInputAmount" placeholder="Amount">
+                            <div class="input-group-addon">.00</div>
+                        </div>
+                    </div>
+                </form>
             </div>
-
-            <div class="col-md-3">
-              <h3 id="section-title">Human Rights</h3>
-              <br>
-              <br>
-              <p> Example Organizations:
-                <br>
-                Greenpeace, Friends of Earth, EarthJustice
-              </p>
-            </div>
-
-            <div class="col-md-3">
-              <h3 id="section-title">Environmental Protection</h3>
-              <p> Example Organizations:
-                <br>
-                Greenpeace, Friends of Earth, EarthJustice
-              </p>
-            </div>
-
-            <div class="col-md-3">
-              <h3 id="section-title">Sustainable Infrastructure</h3>
-              <p> Example Organizations:
-                <br>
-                Greenpeace, Friends of Earth, EarthJustice
-              </p>
-            </div>
-
-            <div class="col-md-3">
-              <h3 id="section-title">Food System</h3>
-              <p> Example Organizations:
-                <br>
-                Greenpeace, Friends of Earth, EarthJustice
-              </p>
-            </div>
-
-            <div class="col-md-3">
-              <h3 id="section-title">Human Rights</h3>
-              <p> Example Organizations:
-                <br>
-                Greenpeace, Friends of Earth, EarthJustice
-              </p>
-            </div>
-          <a href="/register">
-            <button type="submit" class="btn btn-default btn-lg btn-block">DONE</button>
-         </a>
 
         </div>
 
-      </div>
         <!-- closing the container -->
     </div>
 
